--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "tsx src/lib/db/migrate.ts"
   },
   "dependencies": {
     "@ai-sdk/openai-compatible": "^0.1.8",
