--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "deepseek-client",
+  "name": "local-ai-client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "build": "npm run migrate && next build",
+    "start": "next start --port 3011",
     "lint": "next lint",
     "migrate": "tsx src/lib/db/migrate.ts"
   },
