--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai-compatible": "^0.2.14",
+    "@ai-sdk/react": "^1.2.12",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.1.2",
     "ai": "^4.3.16",
